@@ -6,7 +6,7 @@ ENV VERSION=1.0.0
 ENV APRS_USER=aprs
 ENV HOME=/home/aprs
 ENV APRSD=http://github.com/craigerl/aprsd.git
-ENV APRSD_BRANCH="master"
+ENV APRSD_BRANCH="v1.1.0"
 ENV VIRTUAL_ENV=$HOME/.venv3
 
 ENV INSTALL=$HOME/install
